using UnityEngine;

public class River
{
    private int x;
    private int y;
    public Vector2 spawnPosition;

    public GameObject obj;

    public River(int x, int y)
    {
        this.spawnPosition = new Vector2(x, y);
    }
}
