namespace Codes.Security
{
    public class Camera
    {
        
    }
}